fixing end game message alignment

--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@
 .message-container{
   height: 80px;
 }
-.message{
+/* .message{
   position: absolute;
   top:80px;
   width: 600px;
@@ -83,9 +83,9 @@
   right: 0;
   font-weight: bolder;
   font-size: 1.5rem;
-}
+} */
 
-.congratsMessage{
+/* .congratsMessage{
   position: absolute;
   top:140px;
   width: 600px;
@@ -97,6 +97,27 @@
   right: 0;
   font-weight: bolder;
   font-size: 1.5rem;
+} */
+.message{
+  width: 100%;
+  height: 80px;
+  padding: 20px 10px;
+  text-align: center;
+  margin: 0 auto;
+  font-weight: bolder;
+  font-size: 1.5rem;
+  color: #c3b26a;
+}
+
+.congratsMessage{
+  width: 100%;
+  height: 80px;
+  padding: 20px 10px;
+  text-align: center;
+  margin: 0 auto;
+  font-weight: bolder;
+  font-size: 1.5rem;
+  color: #3d7537;
 }
 
 .header {
@@ -138,4 +159,28 @@ button:hover {
   .board-container {
     margin-bottom: 20px;
   }
+
+  .message{
+    width: 100%;
+    height: 5%;
+    padding: 12px 9px;
+    text-align: center;
+    margin: 0 auto;
+    font-weight: bolder;
+    font-size: 1rem;
+    margin-top:-5px
+  }
+  
+  .congratsMessage{
+    width: 100%;
+    height: 10%;
+    padding: 10px 10px;
+    text-align: center;
+    margin: 0 auto;
+    font-weight: bolder;
+    font-size: 1rem;
+    justify-content: center;
+    padding-top: 30px;
+  }
+
 }
